2001-09-25  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp: fix silly bug
 
2001-09-24  John Levon  <moz@compsoc.man.ac.uk>

	* pp/opf_filter.cpp: "fix" compile error
 
2001-09-24  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprofile:
	* gui/Makefile.in: remove old gui
 
2001-09-24  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: make a little more robust
 
2001-09-24  John Levon  <moz@compsoc.man.ac.uk>

	* include/sstream:
	* Makefile.in:
	* configure.in:
	* pp/Makefile.in:
	* gui/Makefile.in: configure/make fixes

	* op_events.c: re-order for Athlon 
	 
2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: small cleanup
 
2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* op_x86.c: support for 2.4.10
 
2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp: rework validator stuff a bit
 
2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp: use std::find_if
 
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_util.cpp: minor tidies
 
2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_dump:
	* dae/op_start: echo errors to stderr
 
	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp:
	* gui/oprof_start.cpp: use fork/exec to spawn children

2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* gui/Makefile.in:
	* gui/oprof_start_config.h: 
	* gui/oprof_start_config.cpp: 
	* gui/oprof_start_util.h: 
	* gui/oprof_start_util.cpp: 
	* gui/oprof_start.h: 
	* gui/oprof_start.cpp: new file for util functions
 
2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_util.c:
	* dae/opd_util.h:
	* dae/oprofiled.c: 
	* pp/oprofpp.c: 
	* pp/opf_filter.cpp: 
	* configure.in: enable __builtin_expect, fix popt problem

	* pp/oprof_convert.c: small fixes
 
	* op_events.c: shorten event descriptions for GUI 

	* gui/*: many more updates
 
	* pp/Makefile.in: fix
 
2001-09-21  John Levon  <moz@compsoc.man.ac.uk>
